// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons with open in new tab false should render 1`] = `
<div
  class="react-cookienotice-buttons-wrapper"
>
  <button
    class="react-cookienotice-accept-button"
  >
    <span>
      acceptButtonLabel
    </span>
  </button>
  <a
    class="react-cookienotice-read-more-button"
    href="readMoreButtonLink"
    target="_self"
  >
    readMoreButtonLabel
  </a>
</div>
`;

exports[`Buttons with open in new tab true should render 1`] = `
<div
  class="react-cookienotice-buttons-wrapper"
>
  <button
    class="react-cookienotice-accept-button"
  >
    <span>
      acceptButtonLabel
    </span>
  </button>
  <a
    class="react-cookienotice-read-more-button"
    href="readMoreButtonLink"
    rel="noreferrer"
    target="_blank"
  >
    readMoreButtonLabel
  </a>
</div>
`;
